<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_fname"
            android:textSize="30sp"
            android:text="@string/tv_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_enter_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_enter_fname"
            android:textSize="30sp"
            android:layout_below="@id/tv_fname"/>

        <TextView
            android:id="@+id/tv_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_below="@id/et_enter_fname"
            android:text="@string/tv_lname"/>

        <EditText
            android:id="@+id/et_enter_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_below="@id/tv_lname"
            android:hint="@string/et_enter_lname"/>

        <Button
            android:id="@+id/click_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/click_button"
            android:layout_alignParentBottom="true"/>


</RelativeLayout>